# varuintarray

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml  test_readme.py
.github/workflows/: ci.yml  pytest.yml  release.yml  test.yml
src/varuintarray/: __init__.py  array.py  takeskip.lark  takeskip.py
tests/: strategies.py  test_array.py  test_boolean.py  test_byte_order.py  test_edge_cases.py  test_functions.py  test_serialize.py  test_size.py  test_takeskip.py  test_ufuncs.py  test_unpackbits.py
