[project]
name = "varuintarray"
version = "1.0.0"
description = "A variable-length unsinged integer array"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "lark>=1.2",
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
    "pytest>=8.4.2",
    "rich>=14.3.2",
    "ruff>=0.14.14",
]
