[project]
name = "varuintarray"
dynamic = ["version"]
description = "A variable-length unsigned integer array"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "rich>=14.3.2",
    "ruff>=0.14.14",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/varuintarray/_version.py"
